# brev_cli

./: .gitignore  LICENSE  README.md  pyproject.toml
brev_cli/: GOALS_FOR_FEATURE  addLogin.sh  agent.py  authentication.py  commands.py  config.py  endpoints.py  helpers.py  main.py  packages.py  spinner.py  start.py  utilities.py  utils.py  variables.py
brev_cli/Start.app/Contents/: Info.plist
brev_cli/Start.app/Contents/Resources/: AppSettings.plist  brev_cli.pth  script
brev_cli/Start.app/Contents/Resources/attrs-20.1.0.dist-info/: RECORD  direct_url.json
brev_cli/Start.app/Contents/Resources/brev_cli-0.2.0.dist-info/: METADATA  RECORD  entry_points.txt
brev_cli/Start.app/Contents/Resources/certifi-2020.6.20.dist-info/: RECORD  direct_url.json
brev_cli/Start.app/Contents/Resources/chardet-3.0.4.dist-info/: RECORD  direct_url.json
brev_cli/Start.app/Contents/Resources/click-7.1.2.dist-info/: RECORD  direct_url.json
brev_cli/Start.app/Contents/Resources/cotter-0.0.1.dist-info/: RECORD  direct_url.json
brev_cli/Start.app/Contents/Resources/ecdsa-0.14.1.dist-info/: RECORD  direct_url.json
brev_cli/Start.app/Contents/Resources/idna-2.10.dist-info/: RECORD  direct_url.json
brev_cli/Start.app/Contents/Resources/more_itertools-8.5.0.dist-info/: RECORD  direct_url.json
brev_cli/Start.app/Contents/Resources/packaging-20.4.dist-info/: RECORD  direct_url.json
brev_cli/app/: brev.icns  brev.py  brev.spec  setup.py
brev_cli/app/env/: agent.py  authentication.py  helpers.py  spinner.py
brev_cli/static/: confetti.js
tests/: test_brev_cli.py
(+31 files in other folders)
